# clipzyme

./: .coveragerc  .gitignore  LICENSE.txt  README.md  check_missing_metadata.py  environment.yml  nox_dockerfile  nox_requirements.txt  pyproject.toml  setup.cfg  tox.ini
analysis/: Results.ipynb
assets/: graphs.heic
clipzyme/: __init__.py
clipzyme/callbacks/: basic.py
clipzyme/datasets/: abstract.py  enzyme_screening.py  enzymemap.py  reaction.py
clipzyme/lightning/: base.py  clipzyme.py
clipzyme/loaders/: abstract.py
clipzyme/loggers/: tensorboard.py  wandb.py
clipzyme/models/: abstract.py  chemprop.py  classifier.py  egnn.py  fair_esm.py  gat.py  protmol.py  seq2seq.py  wln.py
clipzyme/utils/: amino_acids.py  callbacks.py  classes.py  colabfold_msa.py  loading.py  parsing.py  protein_utils.py  proteins.py  pyg.py  reactions.py  screening.py  smiles.py  wln_processing.py
configs/: active_site_3d_aggr.json  ecreact_egnnprotmolret.json  egnnprotmolret.json  eval_fbk15k.json  fb15k237_indrelpred.json  indrellinkpred.json  screening.json
configs/active_site/: active_site_3d_aggr.json  active_site_3d_eval.json  active_site_prediction.json  (+1 more)
docs/: authors.md  conf.py  requirements.txt
files/: AF-P69905-F1-model_v4.cif  new_data.csv
notebooks/: Untitled.ipynb  cobra_sim.ipynb  enzyme_eda.ipynb  iML1515_PreProcessing.ipynb  metabio.ipynb  ppi_database.ipynb  smile2pathways-Copy1.ipynb  smile2pathways.ipynb  synthetic_accesibility.ipynb
nox/: __init__.py
scripts/: dispatcher.py  main.py  onmt_prepare.py  onmt_train.py  screen.py
vino/: __init__.py
(+468 files in other folders)
